fixed layout bug

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,10 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+// .v-application--wrap {
+//   display: none;
+// }
+
+.text-link {
+  text-decoration: none;
+}
